--- a/python_data_processing/assignment_2/lab2.ipynb
+++ b/python_data_processing/assignment_2/lab2.ipynb
@@ -5,12 +5,7 @@
    "id": "8fee8a4e-f596-4396-8595-3c2bc93a5b57",
    "metadata": {},
    "source": [
-    "# Analysis of US Baby Names (1880 - 2014)\n",
-    "\n",
-    "- **Submitted by:** [Your Name]\n",
-    "- **Date:** [Submission Date]\n",
-    "- **Course:** [Course Name]\n",
-    "- **Instructor:** [Instructor Name]"
+    "# Analysis of US Baby Names (1880 - 2014)"
    ]
   },
   {
@@ -38,8 +33,8 @@
    "metadata": {},
    "source": [
     "## Link to the created Jupyter Notebook on GitHub, rendered by nbviewer\n",
-    "- **GitHub Link:** [https://github.com/yourusername/babynames-analysis](https://github.com/yourusername/babynames-analysis)\n",
-    "- **nbviewer Link:** [nbviewer link](https://nbviewer.jupyter.org/github/yourusername/babynames-analysis/blob/main/analysis.ipynb)"
+    "- **GitHub Link:** [github](https://github.com/ahmetenesdur/KhPI_assignments/tree/main/python_data_processing/assignment_2)\n",
+    "- **nbviewer Link:** [nbviewer link](https://nbviewer.org/github/ahmetenesdur/KhPI_assignments/blob/main/python_data_processing/assignment_2/lab2.ipynb)"
    ]
   },
   {
